--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
         email = "timothee.giraud@cnrs.fr", role = c("cre","aut")))
 Description: Create maps made of waffles.
 Depends: R (>= 2.10)
-Imports: graphics, sf, stats, cartography
+Imports: graphics, sf, stats, cartography, methods
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
